<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Transport Droid IL</string>

<string name="error">לא הולך: %s</string>
<string name="query_from_hint">המוצא לנסיעתך</string>
<string name="query_to_hint">היעד שלך</string>
<string name="query_time_hint">מתי? (לא חובה)</string>
<string name="provider_pref">ספק המידע</string>
<string-array name="providers_names">
	<item>משרד התחבורה</item>
	<item>אגד</item>
</string-array>
<string-array name="provider_values">
    <item>mot</item>
    <item>egged</item>
</string-array>
<string-array name="extra_info_values">
    <item>כמה זמן</item>
    <item>כמה כסף</item>
</string-array>
<string name="preferences">הגדרות</string>
<string name="my_location">המיקום שלי</string>
<string name="rtl_fix">תיקון יישור לימין</string>
<string name="rtl_fix_summary">שנה את הסימון בתיבה זו אם הטקסט מיושר לצד הלא-נכון</string>
<string name="search_go">שאל</string>
<color name="auto_location">#3F8CD9</color>
<string name="clear_completions">נקה השלמות אוטומטיות</string>
<string name="clear_completions_summary">סמן כדי לנקות כעת את הזכרון מהשלמות אוטומטיות למיקום ולזמן</string>
<string name="clear_completions_toast">ההשלמות האוטומטיות נוקו מהזכרון</string>
<string name="bidi_numbers_fix">תיקון היפוך מספרים</string>
<string name="bidi_numbers_fix_summary">שנה את הסימון בתיבה זו אם מספרים (קווים, שעות, תאריכים) מופיעים הפוך</string>
<string name="realtime_bus_menu_item">עדכוני זמן-אמת</string>
<string name="updating">מעדכן…</string>
<string name="last_update">עודכן לאחרונה ב-</string>
<string name="inactive_service">השירות להיום הסתיים</string>
<string name="refresh">רענן</string>
<string name="variant_prompt">בחר אלטרנטיבה</string>
<string name="pref_autolocate_summary">האם להפעיל חיפוש מיקום נוכחי מיד בפתיחת האפליקציה</string>
<string name="pref_autolocate_title">מלא שדה \&quot;מוצא\&quot; אוטומטית</string>
<string name="copy">העתק</string>
<string name="realtime_eta_up">חזור</string>
<string name="realtime_stop_name">שם התחנה</string>
<string name="realtime_eta_down">הלוך</string>
<string name="blank_time">00:00</string>
<string name="realtime_stop">תחנה</string>
<string name="find_location">אתר מיקום</string>
<string name="reverse_direction">הפוך כיוון</string>
<string name="extra_info">מידע נוסף להצגה</string>
<string name="extra_info_dialog_title">מידע נוסף להצגה (ספקי המידע תומכים רק באחד)</string>
<string name="pref_light_theme_title">רקע בהיר</string>
<string name="pref_light_theme_summary_on">לאחר הפעלה מחדש, רקע האפליקציה יהיה בהיר</string>
<string name="pref_light_theme_summary_off">לאחר הפעלה מחדש, רקע האפליקציה יהיה כהה</string>
</resources>
