<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="provider" android:title="@string/provider_pref" android:entryValues="@array/provider_values" android:entries="@array/providers_names" android:defaultValue="mot"/>
    <CheckBoxPreference android:key="rtl_fix" android:summary="@string/rtl_fix_summary" android:title="@string/rtl_fix" android:defaultValue="false"/>
    <CheckBoxPreference android:key="autolocate" android:title="@string/pref_autolocate_title" android:defaultValue="false" android:summary="@string/pref_autolocate_summary"/>
    <CheckBoxPreference android:key="bidi_numbers_fix" android:title="@string/bidi_numbers_fix" android:summary="@string/bidi_numbers_fix_summary" android:defaultValue="false"/>
    <CheckBoxPreference android:title="@string/clear_completions" android:summary="@string/clear_completions_summary" android:defaultValue="false" android:key="clear_completions"/>
    <CheckBoxPreference android:key="how_much_time" android:summary="@string/how_much_time_pref_desc" android:title="@string/how_much_time_pref" android:defaultValue="true"/>
    <CheckBoxPreference android:title="@string/pref_light_theme_title" android:key="light_theme" android:summaryOn="@string/pref_light_theme_summary_on" android:summaryOff="@string/pref_light_theme_summary_off" android:defaultValue="false"/>
</PreferenceScreen>
