<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/routeTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/variantSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/variant_prompt" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/realtimeUpdateProgress"
            android:layout_width="20px"
            android:layout_height="20px"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lastUpdateTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/updating"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/inactive_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inactive_service"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bus_up"
            android:layout_width="30dip"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/eta_up"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/realtime_eta_up"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5px"
            android:layout_marginRight="5px"
            android:layout_weight="1.61"
            android:text="@string/realtime_stop_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/eta_down"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/realtime_eta_down"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/bus_down"
            android:layout_width="30dip"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>