<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://transportdroidil.lutzky.net/apk/res/custom"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <ImageButton
        android:id="@+id/locate_me"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:contentDescription="@string/find_location"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_mylocation" />

    <ProgressBar
      android:layout_height="fill_parent"
      android:layout_width="50dp"
      android:visibility="visible" android:id="@+id/location_progress"
      android:layout_gravity="center_vertical"
      />

    <net.lutzky.transportdroidil.AutolocationTextView
        android:id="@+id/query_from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionHint="@string/query_from_hint"
        android:completionThreshold="1"
        android:ellipsize="start"
        android:hint="@string/query_from_hint"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:selectAllOnFocus="true"
        app:preferences_field_name="autocomplete-places" >

    </net.lutzky.transportdroidil.AutolocationTextView>
  </LinearLayout>
  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <ImageButton
        android:id="@+id/reverse"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/reverse_direction"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_media_rew" />

    <net.lutzky.transportdroidil.EnhancedTextView
      android:ellipsize="start" android:layout_height="wrap_content"
      android:layout_width="fill_parent" android:hint="@string/query_to_hint"
      android:selectAllOnFocus="true" android:completionThreshold="1"
      android:completionHint="@string/query_to_hint" android:id="@+id/query_to"
      android:inputType="textNoSuggestions"
      android:singleLine="true"
      app:preferences_field_name="autocomplete-places"
      android:imeOptions="actionNext" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
    <Button android:layout_height="54dp" android:layout_width="fill_parent"
      android:id="@+id/submit" android:layout_weight="1"
      android:drawableRight="@drawable/mot" android:textSize="6pt"
      android:text="@string/search_go" />
    <net.lutzky.transportdroidil.EnhancedTextView
      android:layout_weight="1" android:id="@+id/query_time"
      android:layout_height="fill_parent" android:completionHint="@string/query_time_hint"
      android:layout_width="fill_parent" android:selectAllOnFocus="true"
      android:ellipsize="start" android:hint="@string/query_time_hint"
      app:preferences_field_name="autocomplete-time"
      android:inputType="textNoSuggestions"
      android:singleLine="true"
      android:imeOptions="actionSearch">
    </net.lutzky.transportdroidil.EnhancedTextView>
  </LinearLayout>
</LinearLayout>